Application draft informative box

--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -34,7 +34,7 @@
         padding-top: 20px;
     }
 
-    &.active {
+    &.active, &:hover {
         background-color: $brand-primary;
         transition: all 0.2s ease-in-out;
 
