Refatoração do layout da tela de seleção do agente.

--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -16,6 +16,7 @@
 @import '3-layout/l-header';
 @import '3-layout/l-footer';
 @import '3-layout/l-termos';
+@import '3-layout/l-agentes';
 
 /* ----- 4: COMPONENTS ------- */
 @import '4-components/c-example-block';
