Estilo do Formulario

--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -16,6 +16,7 @@
 @import '3-layout/l-header';
 @import '3-layout/l-footer';
 @import '3-layout/l-termos';
+@import '3-layout/l-form';
 
 /* ----- 4: COMPONENTS ------- */
 @import '4-components/c-example-block';
@@ -29,6 +30,7 @@
 
 /* ----- 5: PAGES ------- */
 @import '5-pages/p-cadastro';
+@import '5-pages/p-formulario';
 
 
 /* ----- 6: VENDORS ------- */
