--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -15,8 +15,6 @@
 /* ----- 3: LAYOUT ------- */
 @import '3-layout/l-header';
 @import '3-layout/l-footer';
-@import '3-layout/l-termos';
-@import '3-layout/l-agentes';
 
 /* ----- 4: COMPONENTS ------- */
 @import '4-components/c-example-block';
@@ -30,7 +28,8 @@
 
 /* ----- 5: PAGES ------- */
 @import '5-pages/p-cadastro';
-
+@import '5-pages/p-termos';
+@import '5-pages/p-agentes';
 
 /* ----- 6: VENDORS ------- */
 // @import './../example-vendor/sss.css';
