Adiciona estilo para box de danger

--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -35,6 +35,13 @@ article.registration {
             position: initial;
         }
 
+        .alert.danger {
+            background: none;
+            border: 0;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+
         ul {
             li {
                 padding: 0;
