Corrige itens em linha no box informativo

--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -158,6 +158,16 @@
             height: 0;
             margin-right: 18px;
             transition: all .2s ease-in-out;
+
+            .item {
+                font-weight: normal;
+                margin-bottom: 8px;
+                
+                .label {
+                    display: block;
+                    font-weight: bold;;
+                }
+            }
         }
 
         &.active {
