Ajuste responsivo na versao mobile

--- a/assets-src/sass/3-layout/_l-footer.scss
+++ b/assets-src/sass/3-layout/_l-footer.scss
@@ -26,6 +26,7 @@ footer#main-footer {
 }
 .support {
     background-color: $gray-lighter;
+    box-sizing: border-box;
     color: $gray-dark;
     display: block;
     padding: 10px 20px;
