Ajustes no layout de seleção do agente e termos.

--- a/assets-src/sass/5-pages/_p-termos.scss
+++ b/assets-src/sass/5-pages/_p-termos.scss
@@ -1,5 +1,5 @@
 .termos {
-    padding-top: 10px;
+    margin-top: 100px;
 
     h2 {
         font-family: $headings-font-family;
@@ -9,7 +9,7 @@
         margin: auto;
 
         @include desktop {
-            width: 50%;
+            width: 40%;
         }
     }
 
@@ -21,7 +21,7 @@
         padding-right: 8%;
 
         @include desktop {
-            width: 50%;
+            width: 40%;
         }
     }
 
