Ajuste no alinhamento e fontes do formulario de edicao

--- a/assets-src/sass/4-components/_c-button.scss
+++ b/assets-src/sass/4-components/_c-button.scss
@@ -35,6 +35,7 @@
     };
 
     &:hover {
+        border: 0;
         color: $light;
         text-decoration: none;
         @include opacity(0.85);
