Ajuste na quebra de linha dos botoes

--- a/assets-src/sass/4-components/_c-button.scss
+++ b/assets-src/sass/4-components/_c-button.scss
@@ -23,7 +23,7 @@
     padding: 14px 50px;
     text-align: center;
     transition: all .3s;
-    white-space: nowrap;
+    white-space: inherit;
     width: auto;
 
     &.secondary {
