--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -126,6 +126,7 @@
             letter-spacing: 0;
             line-height: 1.1875rem;
             margin-bottom: 0;
+            text-align: left;
         }
 
         i {
