Fixa o rodape no final da tela

--- a/assets-src/sass/3-layout/_l-footer.scss
+++ b/assets-src/sass/3-layout/_l-footer.scss
@@ -33,3 +33,13 @@ footer#main-footer {
     text-decoration: underline;
     width: 100%;
 }
+
+/* Fixed footer */
+body.controller-aldirblanc {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+body.controller-aldirblanc #main-section {
+    flex: 1;
+}
